criado algumas configuracoes

--- a/src/ProjectManagement.API/ProjectManagement.API.csproj
+++ b/src/ProjectManagement.API/ProjectManagement.API.csproj
@@ -7,11 +7,18 @@
     <UserSecretsId>86e84b49-5ed7-4f35-b433-14637e70bd3c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <InvariantGlobalization>true</InvariantGlobalization>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectManagement.Application\ProjectManagement.Application.csproj" />
+    <ProjectReference Include="..\ProjectManagement.Infra\ProjectManagement.Infra.csproj" />
   </ItemGroup>
 
 </Project>
