--- a/src/ProjectManagement.API/appsettings.json
+++ b/src/ProjectManagement.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "Portgresql":  "Host=localhost;Port=5432;Pooling=true;Database=ProjectManagement;User Id=postgresql;Password=Postegres2024!"
+  }
 }
