--- a/src/ProjectManagement.API/appsettings.json
+++ b/src/ProjectManagement.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "Portgresql":  "Host=localhost;Port=5432;Pooling=true;Database=ProjectManagement;User Id=postgresql;Password=Postegres2024!"
+    "Portgresql": "Host=localhost;Port=5432;Pooling=true;Database=ProjectManagement;User Id=postgres;Password=Postegres2024!"
   }
 }
