--- a/src/ProjectManagement.Application/ProjectManagement.Application.csproj
+++ b/src/ProjectManagement.Application/ProjectManagement.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\ProjectManagement.Core\ProjectManagement.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
